# entservices-unifiedcasmanagement

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  PRODUCT.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
.github/workflows/: L1-tests.yml  L2-tests.yml
LinearPlaybackControl/: CMakeLists.txt  LinearPlaybackControl.conf.in  LinearPlaybackControl.config  LinearPlaybackControl.cpp  LinearPlaybackControl.h  LinearPlaybackControlImplementation.cpp  LinearPlaybackControlImplementation.h
ScreenCapture/: ScreenCaptureImplementation.cpp  ScreenCaptureImplementation.h
Tests/L1Tests/: CMakeLists.txt
Tests/L1Tests/tests/: test_ScreenCapture.cpp
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: ScreenCapture_L2Test.cpp
plugin/: CMakeLists.txt  LibMediaPlayerImpl.cpp  LibMediaPlayerImpl.h  Module.h  UnifiedCASManagement.conf.in  UnifiedCASManagement.config  UnifiedCASManagement.cpp  UnifiedCASManagement.h  UnifiedCASManagementImplementation.cpp  UnifiedCASManagementImplementation.h
